Revert "Removed resourcevol pvc from health-discovery chart"
This reverts commit 451dadc1a9c8d6c656db54eaa0f563dcea7a06e7.

--- a/charts/health-discovery/templates/health-discovery-deployment.yaml
+++ b/charts/health-discovery/templates/health-discovery-deployment.yaml
@@ -75,5 +75,12 @@ spec:
           resources: 
             requests:
               memory: {{ .Values.maxMemory }}
+          volumeMounts:
+            - mountPath: /opt/resources/platform
+              name: resourcevol
       restartPolicy: Always
+      volumes:
+        - name: resourcevol
+          persistentVolumeClaim:
+            claimName: resourcevol
 status: {}
