Use AWS efs-sc storage class to allow RWX access mode

--- a/charts/information-discovery/templates/resourcevol-persistentvolumeclaim.yaml
+++ b/charts/information-discovery/templates/resourcevol-persistentvolumeclaim.yaml
@@ -7,7 +7,8 @@ metadata:
   name: resourcevol
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: efs-sc
   resources:
     requests:
       storage: 10Gi
