--- a/charts/patent-monitor/templates/database-deployment.yaml
+++ b/charts/patent-monitor/templates/database-deployment.yaml
@@ -70,6 +70,15 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: dbvol
+          securityContext:
+            allowPrivilegeEscalation: false
+            privileged: false            
+      securityContext:
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
+        fsGroupChangePolicy: "Always"
+        runAsNonRoot: true
       restartPolicy: Always
       volumes:
         - name: dbvol
