Run MariaDB container with UID 999

--- a/charts/health-discovery/templates/database-deployment.yaml
+++ b/charts/health-discovery/templates/database-deployment.yaml
@@ -70,6 +70,9 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: dbvol
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 999
       restartPolicy: Always
       volumes:
         - name: dbvol
