Added securityContext configuration to set volume filesystem write privileges for averbis group

--- a/charts/health-discovery/templates/health-discovery-deployment.yaml
+++ b/charts/health-discovery/templates/health-discovery-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       labels:
         io.kompose.service: health-discovery
     spec:
+      securityContext:
+            enabled: true
+            runAsUser: 1000
+            fsGroup: 1000
       imagePullSecrets:
       - name: averbis-docker-registry
       containers:
