--- a/charts/health-discovery/templates/solr-deployment.yaml
+++ b/charts/health-discovery/templates/solr-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       labels:
         io.kompose.service: solr
     spec:
+      securityContext:
+          enabled: true
+          runAsUser: 1000
+          fsGroup: 1000
       imagePullSecrets:
       - name: averbis-docker-registry
       containers:
