Added securityContext for database deployment

--- a/charts/health-discovery/templates/database-deployment.yaml
+++ b/charts/health-discovery/templates/database-deployment.yaml
@@ -25,6 +25,10 @@ spec:
       labels:
         io.kompose.service: database
     spec:
+      securityContext:
+        enabled: true
+        runAsUser: 999
+        fsGroup: 999
       containers:
         - env:
             - name: MYSQL_DATABASE
