Add security context to containers running as non-root

--- a/charts/information-discovery/templates/database-deployment.yaml
+++ b/charts/information-discovery/templates/database-deployment.yaml
@@ -25,6 +25,9 @@ spec:
       labels:
         io.kompose.service: database
     spec:
+      securityContext:
+        runAsUser: 999
+        fsGroup: 999
       imagePullSecrets:
       - name: averbis-docker-registry
       containers:
