--- a/charts/health-discovery/templates/database-deployment.yaml
+++ b/charts/health-discovery/templates/database-deployment.yaml
@@ -28,6 +28,8 @@ spec:
       securityContext:
         runAsUser: 999
         fsGroup: 999
+      imagePullSecrets:
+      - name: averbis-docker-registry
       containers:
         - env:
             - name: MYSQL_DATABASE
