--- a/charts/health-discovery/templates/database-deployment.yaml
+++ b/charts/health-discovery/templates/database-deployment.yaml
@@ -67,7 +67,7 @@ spec:
               value: 256m
             - name: innodb_log_file_size
               value: 256m
-          image: registry.averbis.com/mariadb/mariadb:9.4.0
+          image: {{ .Values.registryUrl }}/mariadb/mariadb:9.4.0
           name: database
           ports:
             - containerPort: 3306
