--- a/charts/health-discovery/templates/solr-deployment.yaml
+++ b/charts/health-discovery/templates/solr-deployment.yaml
@@ -37,7 +37,7 @@ spec:
               value: "8983"
             - name: TEXTANALYSIS_URL
               value: http://health-discovery:8080/health-discovery/rest
-          image: registry.averbis.com/solr/solr:9.4.0
+          image: {{ .Values.registryUrl }}/solr/solr:9.4.0
           livenessProbe:
             exec:
               command:
