--- a/charts/health-discovery/templates/solr-deployment.yaml
+++ b/charts/health-discovery/templates/solr-deployment.yaml
@@ -62,4 +62,16 @@ spec:
         - name: solrvol
           persistentVolumeClaim:
             claimName: solrvol
+      {{- with (.Values.solr).tolerations }}
+      tolerations:
+      {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.solr).affinity }}
+      affinity:
+      {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with (.Values.solr).nodeSelector }}
+      nodeSelector:
+      {{ toYaml . | nindent 8 }}
+      {{- end }}
 status: {}
