--- a/charts/health-discovery/templates/solr-deployment.yaml
+++ b/charts/health-discovery/templates/solr-deployment.yaml
@@ -31,12 +31,8 @@ spec:
       - name: averbis-docker-registry
       containers:
         - env:
-            - name: SOLR_MAX_MEM
+            - name: SOLR_HEAP
               value: 512m
-            - name: SOLR_PORT
-              value: "8983"
-            - name: TEXTANALYSIS_URL
-              value: http://health-discovery:8080/health-discovery/rest
           image: {{ .Values.registryUrl }}/solr/solr:10.2.0
           livenessProbe:
             exec:
